--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <header class="top-bar">
-  <div class="left">SoftMarket</div>
-  <div class="right">&#9776;</div> <!-- menu hambúrguer (☰) -->
+  <div class="left">JhonaDev139 - Key</div>
 </header>
 <script src="script.js"></script>
 </body>
