--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body>
   <header class="top-bar">
-  <div class="left">JhonaDev139 - Key</div>
-</header>
-<script src="script.js"></script>
+    <div class="left">JhonaDev139 - Key</div>
+  </header>
+
+  <!-- Conteúdo central -->
+  <main class="content">
+    <div class="key-box">
+      <h2>Sua Key</h2>
+      <p id="key-text">Carregando...</p>
+    </div>
+  </main>
+
+  <!-- Rodapé fixo -->
+  <footer class="footer">
+    <p>© 2025 JhonaDev139 - Todos os direitos reservados</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
-
-
