--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JhonaDev139 - Key</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <!-- Se usar CSP estrita, libere estes domínios:
+       connect-src 'self' raw.githubusercontent.com cdn.jsdelivr.net api.github.com; -->
 </head>
 <body>
   <header class="top-bar">
     <div class="left">JhonaDev139 - Key</div>
   </header>
 
-  <!-- Conteúdo central -->
   <main class="content">
-    <div class="key-box">
+    <div class="key-box" role="region" aria-label="Área da Key">
       <h2>Sua Key</h2>
-      <p id="key-text">Carregando...</p>
+      <p id="key-text" class="key-text" aria-live="polite">Carregando...</p>
+      <div class="actions">
+        <button id="copy-btn" class="btn" disabled>Copiar Key</button>
+        <button id="reload-btn" class="btn outline">Recarregar</button>
+      </div>
+      <small id="status" class="status" aria-live="polite"></small>
     </div>
   </main>
 
-  <!-- Rodapé fixo -->
   <footer class="footer">
-    <p>© 2025 JhonaDev139 - Todos os direitos reservados</p>
+    <p>© 2025 JhonaDev139 — Todos os direitos reservados</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
-</html>
+    </html>
