--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <h1 class="main-card-title">Escolha uma opção</h1>
 
     <!-- Card da Key -->
-
+<div class="inner-card">
+  <h2>KEY</h2>
+  <button class="btn open-key-btn">Ver Key</button>
+</div>
+    
 <!-- Key box existente escondida inicialmente -->
 <div id="key-container" class="key-box hidden" role="region" aria-label="Área da Key">
   <h2>Sua Key</h2>
