--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div id="info-popup" class="popup hidden">
   <div class="popup-card">
     <h2>Informações do Script</h2>
-    <p>Aqui você pode escrever detalhes sobre cada função do script, dicas, exemplos, etc.</p>
+    <p>Teste</p>
     <button class="btn close-popup-btn">Fechar</button>
   </div>
 </div>
